--- a/data/monitoring_data/Community_data_processing.Rmd
+++ b/data/monitoring_data/Community_data_processing.Rmd
@@ -82,7 +82,7 @@ CCFRP_combined <- CCFRP_CPUE %>%
                   mutate(blue_rockfish_merge = rowSums(select(.,'blue_rockfish','deacon_rockfish')),
                          mackerel_family_merge = rowSums(select(., 'mackerel_family_scombridae','pacific_chub_mackerel','jack_mackerel')),
                          sanddabs_merge = rowSums(select(., 'pacific_sanddab','sanddab_spp','speckled_sanddab')))%>%
-                  select(!(c('blue_rockfish','deacon_rockfish','mackerel_family_scombridae',,'pacific_chub_mackerel',
+                  select(!(c('blue_rockfish','deacon_rockfish','mackerel_family_scombridae','pacific_chub_mackerel',
                              'pacific_sanddab','sanddab_spp','speckled_sanddab','jack_mackerel'))) %>%
                   #drop species
                   select(!(c('northern_anchovy',
@@ -167,7 +167,6 @@ kelp_fish_counts <- kelp_fish_counts %>%
                     group_by(year, site, zone, level, transect, classcode)%>%
                     dplyr::summarize(total_count = sum(count)) #counts in raw data are grouped by size class. Take summary across all sizes
 
-
 #join species names by class code 
 input_file <- "MLPA_kelpforest_taxon_table.4.csv"  
 kelp_taxon <- read.csv(file.path(data_path, input_file)) %>%
@@ -180,7 +179,7 @@ kelp_fish_counts<-  left_join(kelp_fish_counts, kelp_taxon, by="classcode")
 kelp_fish_counts <- kelp_fish_counts %>%
                     dplyr::select(year, site, zone, level, transect, species=species_definition, total_count)%>%
                     filter(!(species=='Sebastes atrovirens/carnatus/chrysomelas/caurinus'))
-        
+
 
 #add affiliated_mpa
 
@@ -238,20 +237,64 @@ kelp_fish_counts <- kelp_fish_counts %>%
 
 
 #reshape to wide format
-kelp_fish_counts <- kelp_fish_counts %>%
+kelp_fish_counts1 <- kelp_fish_counts %>%
                     pivot_wider(names_from=species, values_from=counts, values_fill = 0) %>%
                     janitor::clean_names()%>%
                     drop_na(region4)%>%
                     mutate(MHW = ifelse(year>=2014 & year<=2016, "during",ifelse(year<2014, "before","after")))%>%
                     dplyr::select(year, region3, region4, affiliated_mpa, mpa_defacto_class, mpa_defacto_designation, MHW, zone, level, transect, everything(),-c(no_organisms_present_in_this_sample))
 
+
+#drop species and combine to higher taxa
+#### see reference taxonomy table https://docs.google.com/spreadsheets/d/1vxy0XVOrlNhXD-i9tWL_F9G5h8S3S4OV/edit#gid=2031917236
+
+kelp_fish_combined <- as.data.frame(kelp_fish_counts1) %>%
+                  
+                  #merge species
+                  dplyr::mutate(citharichthys_merge = rowSums(select(.,'citharichthys','citharichthys_sordidus','citharichthys_stigmaeus')
+                                                              ))%>%
+                  select(!(c('citharichthys','citharichthys_sordidus','citharichthys_stigmaeus'))) %>%
+                  #drop species
+                  select(!(c('anisotremus_davidsonii',
+                             'cheilotrema_saturnum',
+                             'unidentified_fish',
+                             'apodichthys_flavidus',
+                             'atherinopsidae',
+                             'aulorhynchus_flavidus',
+                             'bothidae',
+                             'clupeiformes',
+                             'cryptacanthodes_giganteus',
+                             'embiotocidae',
+                             'engraulis_mordax',
+                             'gobiesox_maeandricus',
+                             'hyperprosopon_anale',
+                             'hyperprosopon_argenteum',
+                             'hyperprosopon_ellipticum',
+                             'leiocottus_hirundo',
+                             'lethops_connectens',
+                             'neoclinus_blanchardi',
+                             'pholidae',
+                             'pleuronectidae',
+                             'rathbunella_alleni',
+                             'rathbunella_hypoplecta',
+                             'ronquilus_jordani',
+                             'sardinops_sagax',
+                             'sebastes',
+                             'stichaeidae',
+                             'syngnathus',
+                             'trachurus_symmetricus',
+                             'ulvicola_sanctaerosae')))%>%
+                  #drop string
+                  rename(citharichthys=citharichthys_merge)
+                         
+
 #Export
 #path_aurora <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data" 
 #write.csv(kelp_fish_counts,file.path(path_aurora, "kelp_fish_counts.csv"), row.names = FALSE)
 
 
-kelp_fish_mpa_year_step1 <- kelp_fish_counts %>% 
-                  pivot_longer(cols=11:152, names_to="species",values_to="counts")%>%
+kelp_fish_mpa_year_step1 <- kelp_fish_combined %>% 
+                  pivot_longer(cols=11:121, names_to="species",values_to="counts")%>%
                   group_by(year, region3, region4, affiliated_mpa, mpa_defacto_class, mpa_defacto_designation, MHW, species)%>%
                   dplyr::summarize(total_counts = sum(counts))%>%
                   ungroup()%>%
@@ -263,7 +306,7 @@ kelp_fish_mpa_year <- left_join(kelp_fish_mpa_year_step1, envr_dat, by=c("year",
                                                        "mpa_defacto_class",
                                                        "mpa_defacto_designation",
                                                        "affiliated_mpa"="mpa_name"))%>%
-                  dplyr::select(1:7,150:168,8:149) %>%
+                  dplyr::select(1:7,119:137,8:118) %>%
                   dplyr::select(!c("mpa_class","mpa_designation")) %>%
                   dplyr::select(group, everything()) %>%
                   mutate(group=recode(group,kelp="kelp_fish"))
@@ -364,7 +407,7 @@ kelp_swath_counts <- kelp_swath_counts %>%
 
 
 #reshape to wide format
-kelp_swath_counts <- kelp_swath_counts %>%
+kelp_swath_counts1 <- kelp_swath_counts %>%
                     pivot_wider(names_from=species, values_from=counts, values_fill = 0) %>%
                     janitor::clean_names()%>%
                     drop_na(region4) %>%
@@ -372,12 +415,42 @@ kelp_swath_counts <- kelp_swath_counts %>%
                     dplyr::select(year, region3, region4, affiliated_mpa, mpa_defacto_class, MHW, everything())
                     #dplyr::select(-c(no_organisms_present_in_this_sample))
 
+
+
+#drop species and combine to higher taxa
+#### see reference taxonomy table https://docs.google.com/spreadsheets/d/1vxy0XVOrlNhXD-i9tWL_F9G5h8S3S4OV/edit#gid=2031917236
+
+kelp_swath_counts2 <- as.data.frame(kelp_swath_counts1) %>%
+                  
+                  #merge species
+                  dplyr::mutate(urticina_merge = rowSums(select(.,'urticina', 
+                                                          'urticina_coriacea', 'urticina_crassicornis', 'urticina_piscivora')
+                                                              ))%>%
+                  select(!(c('urticina', 
+                                                          'urticina_coriacea', 'urticina_crassicornis', 'urticina_piscivora'))) %>%
+                  #drop species
+                  select(!(c('anthopleura',
+                             'asteroidea',
+                             'haliotis',
+                             'laminaria',
+                             'laminariales',
+                             'octopus',
+                             'pisaster',
+                             'pugettia_spp',
+                             'stylasterias_forreri',
+                             'urticina_columbiana',
+                             'urticina_columbiana_mcpeaki',
+                             )))%>%
+                  #drop string
+                  rename(urticina=urticina_merge)
+
+
 #Export
 #path_aurora <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data" 
 #write.csv(kelp_swath_mpa_year, file.path(path_aurora, "kelp_swath_mpa_year_counts.csv"), row.names = FALSE)
 
-kelp_swath_mpa_year_step1 <- kelp_swath_counts %>%
-                        pivot_longer(cols=10:177, names_to="species",values_to="counts")%>%
+kelp_swath_mpa_year_step1 <- kelp_swath_counts2 %>%
+                        pivot_longer(cols=10:163, names_to="species",values_to="counts")%>%
                         group_by(year, region3, region4, affiliated_mpa, mpa_defacto_class, mpa_defacto_designation, MHW, species)%>%
                         dplyr::summarize(total_counts = sum(counts))%>%
                         ungroup()%>%
@@ -391,7 +464,7 @@ kelp_swath_mpa_year <- left_join(kelp_swath_mpa_year_step1, envr_dat,
                                                        "mpa_defacto_class",
                                                        "mpa_defacto_designation",
                                                        "affiliated_mpa"="mpa_name"))%>%
-                  dplyr::select(1:7,176:194,8:175) %>%
+                  dplyr::select(1:7,162:180,8:161) %>%
                   dplyr::select(!c("mpa_class","mpa_designation")) %>%
                   dplyr::select(group, everything()) %>%
                   mutate(group=recode(group,kelp="kelp_swath"))
