--- a/data/monitoring_data/Community_data_processing.Rmd
+++ b/data/monitoring_data/Community_data_processing.Rmd
@@ -131,15 +131,15 @@ CCFRP_CPUE <- CCFRP_CPUE %>%
 CCFRP_zero_drop <- CCFRP_CPUE %>% filter(region3=='central') %>%
                     select(!(where(~ any(. != 0))))
 
-CCFRP_cen <- CCFRP_zero_drop <- CCFRP_CPUE %>% filter(region3=='central') %>%
+CCFRP_cen <- CCFRP_CPUE %>% filter(region3=='central') %>%
                     select(where(~ any(. != 0)))
 
 #Export
 #path_aurora <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data" 
 #write.csv(CCFRP_CPUE,file.path(path_aurora, "CCFRP_species_counts.csv"), row.names = FALSE)
 
-CCFRP_mpa_year_step1 <- CCFRP_CPUE %>%
-                  pivot_longer(cols=10:81, names_to="species",values_to="CPUE")%>%
+CCFRP_mpa_year_step1 <- CCFRP_cen %>%
+                  pivot_longer(cols=10:46, names_to="species",values_to="CPUE")%>%
                   group_by(year, group, region3, region4, MHW, affiliated_mpa, mpa_class, mpa_designation, species)%>%
                   dplyr::summarize(mean_CPUE = mean(CPUE))%>%
                   ungroup()%>%
@@ -150,12 +150,12 @@ CCFRP_mpa_year <- left_join(CCFRP_mpa_year_step1, envr_dat, by=c("year","group",
                                                        "mpa_class"="mpa_defacto_class",
                                                        "mpa_designation"="mpa_defacto_designation",
                                                        "affiliated_mpa"="mpa_name"))%>%
-                  filter(!(affiliated_mpa=="trinidad smr"))%>% #not a real MPA per PI
+                  #filter(!(affiliated_mpa=="trinidad smr"))%>% #not a real MPA per PI
                   dplyr::select(!(c("mpa_class.y","mpa_designation.y")))%>%
-                  dplyr::select(1:8,81:96,9:80)
+                  dplyr::select(1:8,46:61,9:45)
 
 #Export
-#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
 #write.csv(CCFRP_mpa_year,file.path(path_aurora, "CCFRP_mpa_year.csv"), row.names = FALSE)
 ```
 
@@ -204,7 +204,8 @@ kelp_fish_counts <- left_join(kelp_fish_counts, kelp_sites, by="site")
 
 kelp_fish_counts <- kelp_fish_counts %>%
                     ungroup() %>%
-                    dplyr::select(year, affiliated_mpa=ca_mpa_name_short,mpa_class, mpa_designation, zone, level, transect, species, total_count) %>%
+                    dplyr::select(year, affiliated_mpa=ca_mpa_name_short,mpa_class, mpa_designation, zone, level, transect, species,
+                                  total_count) %>%
                     mutate(mpa_designation = ifelse(mpa_designation=="reference","ref",mpa_class))
 
 
@@ -319,8 +320,8 @@ kelp_fish_mpa_year <- left_join(kelp_fish_mpa_year_step1, envr_dat, by=c("year",
                                                        "affiliated_mpa"="mpa_name"))%>%
                   dplyr::select(1:7,119:137,8:118) %>%
                   dplyr::select(!c("mpa_class","mpa_designation")) %>%
-                  dplyr::select(group, everything()) %>%
-                  mutate(group=recode(group,kelp="kelp_fish"))
+                  mutate(group="kelp_fish") %>%
+                  dplyr::select(group, everything()) 
 
 
 #Export year                     
@@ -468,7 +469,7 @@ kelp_swath_counts3 <- kelp_swath_counts2 %>% filter(region3=='central') %>%
 #write.csv(kelp_swath_mpa_year, file.path(path_aurora, "kelp_swath_mpa_year_counts.csv"), row.names = FALSE)
 
 kelp_swath_mpa_year_step1 <- kelp_swath_counts3 %>%
-                        pivot_longer(cols=10:163, names_to="species",values_to="counts")%>%
+                        pivot_longer(cols=10:73, names_to="species",values_to="counts")%>%
                         group_by(year, region3, region4, affiliated_mpa, mpa_defacto_class, mpa_defacto_designation, MHW, species)%>%
                         dplyr::summarize(total_counts = sum(counts))%>%
                         ungroup()%>%
@@ -482,10 +483,10 @@ kelp_swath_mpa_year <- left_join(kelp_swath_mpa_year_step1, envr_dat,
                                                        "mpa_defacto_class",
                                                        "mpa_defacto_designation",
                                                        "affiliated_mpa"="mpa_name"))%>%
-                  dplyr::select(1:7,162:180,8:161) %>%
+                  dplyr::select(1:7,72:90,8:71) %>%
                   dplyr::select(!c("mpa_class","mpa_designation")) %>%
-                  dplyr::select(group, everything()) %>%
-                  mutate(group=recode(group,kelp="kelp_swath"))
+                  mutate(group = "kelp_swath")%>%
+                  dplyr::select(group, everything()) 
 
 
 #Export year level
