--- a/data/monitoring_data/Community_data_processing.Rmd
+++ b/data/monitoring_data/Community_data_processing.Rmd
@@ -321,11 +321,13 @@ kelp_fish_mpa_year <- left_join(kelp_fish_mpa_year_step1, envr_dat, by=c("year",
                   dplyr::select(1:7,119:137,8:118) %>%
                   dplyr::select(!c("mpa_class","mpa_designation")) %>%
                   mutate(group="kelp_fish") %>%
-                  dplyr::select(group, everything()) 
+                  dplyr::select(group, everything()) %>%
+                  filter(region3 == 'central') %>%
+                  select(where(~ any(. != 0)))
 
 
 #Export year                     
-#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
 #write.csv(kelp_fish_mpa_year,file.path(path_aurora, "kelp_fish_mpa_year.csv"), row.names = FALSE)
 ```
 
@@ -486,11 +488,13 @@ kelp_swath_mpa_year <- left_join(kelp_swath_mpa_year_step1, envr_dat,
                   dplyr::select(1:7,72:90,8:71) %>%
                   dplyr::select(!c("mpa_class","mpa_designation")) %>%
                   mutate(group = "kelp_swath")%>%
-                  dplyr::select(group, everything()) 
+                  dplyr::select(group, everything()) %>%
+                  filter(region3 == 'central') %>%
+                  select(where(~ any(. != 0)))
 
 
 #Export year level
-#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
 #write.csv(kelp_swath_mpa_year, file.path(path_aurora, "kelp_swath_mpa_year.csv"), row.names = FALSE)
 
 ```
@@ -638,14 +642,16 @@ kelp_upc_mpa_year <- left_join(kelp_upc_mpa_year_step1, envr_dat,
                                                        "mpa_defacto_class",
                                                        "mpa_defacto_designation",
                                                        "affiliated_mpa"="mpa_name"))%>%
-                  dplyr::select(1:7,80:98,8:79) %>%
+                  dplyr::select(1:7,66:84,8:65) %>%
+                  mutate(group="kelp_upc")%>%
                   dplyr::select(!c("mpa_class","mpa_designation")) %>%
                   dplyr::select(group, everything()) %>%
-                  mutate(group=recode(group,kelp="kelp_upc")) %>%
-                  mutate_at(c(25:96), ~replace_na(.,0))
+                  mutate_at(c(25:82), ~replace_na(.,0))%>%
+                  filter(region3 == 'central') %>%
+                  select(where(~ any(. != 0)))
 
 #Export
-#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
 #write.csv(kelp_upc_mpa_year,file.path(path_aurora, "kelp_upc_mpa_year.csv"), row.names = FALSE)
 
 
@@ -900,13 +906,15 @@ deep_reef_counts_envr <- left_join(deep_reef_merge, envr_dat,
                                                     "mpa_class"="mpa_class",
                                                     "mpa_defacto_designation"="mpa_designation",
                                                   "affiliated_mpa"="mpa_name")) %>%
-                  dplyr::select(1:8,114:132,9:113) %>%
+                  dplyr::select(1:8,67:84,9:66) %>%
                   dplyr::select(!c("mpa_defacto_class.y","mpa_defacto_designation.y"),
                                 mpa_defacto_class="mpa_defacto_class.x") %>%
-                  dplyr::select(group, everything())
+                  dplyr::select(group, everything())%>%
+                  filter(region3 == 'central') %>%
+                  select(where(~ any(. != 0)))
 
 #Export
-#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
 #write.csv(deep_reef_counts_envr,file.path(path_aurora, "deep_reef_mpa_year.csv"), row.names = FALSE)
 
 ```
@@ -936,14 +944,27 @@ rocky_counts_raw <- rocky_counts_raw %>%
 
 rocky_counts_raw$site <- tolower(rocky_counts_raw$site) 
 
+
+
 rocky_count_envr <- left_join(rocky_counts_raw, rocky_envr_vars, by=c("year","site"))%>%
   mutate(group="rocky")%>%
   select(year, group, region3, region4,site, mpa_designation, affiliated_mpa, 
-         mpa_designation,59:74, 8:56)
+         mpa_designation,59:74, 8:56) %>%
+        filter(region3 == 'central') %>%
+                  select(where(~ any(. != 0)))%>%
+        select(!(c(rock, sand, tar))) %>% 
+  mutate(row_sum = rowSums(.[24:65]))
+
+#convert to proportion after substrate drop (rock sand tar)
+
+rocky_count_prop <- rocky_count_envr %>%
+                    rowwise() %>%
+                    mutate(across(24:64)/row_sum)%>%
+                    select(!(row_sum))
 
 
 #export
-#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
 #write.csv(rocky_count_envr, file.path(path_aurora, "rocky_mpa_year.csv"), row.names = FALSE)
 
 ```
