--- a/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
@@ -5,6 +5,11 @@ date: "2022-08-23"
 output: html_document
 ---
 
+#required packages
+```{r}
+rm(list=ls())
+require(dplyr)
+```
 
 **Part 1 - central coast analyses**
 #step 0: load data
@@ -19,8 +24,9 @@ output: html_document
 #============================ Step 0 =========================================#
 
 ```{r}
-rm(list=ls())
-dat_dir <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars/"
+
+dat_dir <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
+
 
 CCFRP <- read.csv(file.path(dat_dir, "CCFRP_mpa_year.csv"))
 kelp_swath <- read.csv(file.path(dat_dir, "kelp_swath_mpa_year.csv"))
@@ -37,6 +43,11 @@ rocky <- read.csv(file.path(dat_dir, "rocky_mpa_year.csv"))
 #========================== Step 1 & 2 ========================================#
 
 ```{r}
+
+###NOTE: input data are already filtered to central coast and should not 
+#contain species that were never encountered. However, data drop thresholds
+#should be included at this stage. 
+
 CCFRP_cen <- CCFRP %>% filter(region4=='central') %>%
   select(where(~ any(. != 0)))
 kelp_swath_cen <- kelp_swath %>% filter(region4=='central') %>%
@@ -58,20 +69,20 @@ rocky_cen <- rocky %>% filter(region4=='central') %>%
 ```{r}
 
 #standardize swath to max
-kelp_swath_stan <- decostand(kelp_swath_cen[25:102], method="max",
+kelp_swath_stan <- decostand(kelp_swath_cen[25:87], method="max",
                              margin=2, na.rm=TRUE)
 
 nrow(kelp_swath_cen) #check length
 nrow(kelp_swath_stan) #check length
 
 kelp_swath_stan1 <- cbind(kelp_swath_cen[1:24],kelp_swath_stan)%>%
-                    select(!c('dictyoneurum_californicum_reticulatum'))
+                    select(!c('dictyoneurum_californicum_reticulatum')) #drop this spp because UPC counts are more accurate
 
 
 
 
 #standardize upc to max
-kelp_upc_stan <- decostand(kelp_upc_cen[25:79], method="max",
+kelp_upc_stan <- decostand(kelp_upc_cen[25:66], method="max",
                              margin=2, na.rm=TRUE)
 
 nrow(kelp_upc_cen) #check length
@@ -80,7 +91,6 @@ nrow(kelp_upc_stan) #check length
 kelp_upc_stan1 <- cbind(kelp_upc_cen[1:24],kelp_upc_stan) %>%
                   select(!c('macrocystis_pyrifera',
                        'stylaster_californicus',
-                      'macrocystis_pyrifera',
                        'stephanocystis_osmundacea')) #remove UPC species that are recorded by swath
 
 
@@ -96,7 +106,11 @@ kelp_stan <- left_join(kelp_swath_stan1, kelp_upc_stan2, by=c("year",
                                                               "affiliated_mpa",
                                                               "mpa_defacto_class",
                                                               "MHW",
-                                                              "mpa_defacto_designation"))
+                                                              "mpa_defacto_designation"))%>%
+                        select(!(c(group.x, group.y)))%>%
+                        mutate(group = "kelp_invalg")%>%
+                        select(group, everything())
+               
 
 #check for any unmatched data
 kelp_check <-  anti_join(kelp_swath_stan1, kelp_upc_stan2, by=c("year",
@@ -106,27 +120,8 @@ kelp_check <-  anti_join(kelp_swath_stan1, kelp_upc_stan2, by=c("year",
                                                               "MHW",
                                                               "mpa_defacto_designation"))
 
-#drop higher order taxa that might include duplicates
-kelp_stan <- kelp_stan %>% 
-             select(!(c('apostichopus',
-                        'anthopleura',
-                        'asteroidea',
-                        'haliotis',
-                        'laminaria',
-                        'laminariales',
-                       'pisaster',
-                       'pugettia_spp',
-                       'stylasterias_forreri',
-                       'urticina',
-                        'urticina_columbiana',
-                        'urticina_columbiana_mcpeaki',
-                       'red_alga_with_cylindrical_branches_definition_used_in_2000',
-                       'ucsc_2000_definition_of_other_red_included_all_red_algae_except_rhospp_bushy_leafy_crucor_and_erecor',
-                       'ucsb_2000_definition_of_other_red_included_all_red_algae_except_rhospp_bushy_leafy_crucor_and_erecor',
-                       'sargassum')))
 
-
-#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"  
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data"
 #write.csv(kelp_stan, file.path(path_aurora, "kelp_swath_upc_mpa_year.csv"), row.names = FALSE)
 ```
 
@@ -144,11 +139,8 @@ CCFRP_process <- CCFRP_cen %>%
   dplyr::select(-sum)%>%
   mutate(desig_state = paste(mpa_designation,MHW))%>%
   dplyr::select(desig_state, everything())%>%
-  arrange(year, desig_state)%>% #remove rows containing only zeros
-  select(!(c('mackerel_family_scombridae',
-             'un_id_blue_rockfish',
-             'unknown',
-             'unknown_rockfish')))#drop species
+  arrange(year, desig_state) #remove rows containing only zeros
+
 
 #define grouping vars
 CCFRP_group_vars <- CCFRP_process %>%
@@ -173,11 +165,9 @@ CCFRP_distmat <- vegdist(CCFRP_rel, method = "bray", na.rm=T)
 #kelp invalg processing--------------------------------------------------
 
 kelp_invalg <- kelp_combined %>%
-                  dplyr::select(-bare_rock,
-                                -bare_sand, -shell_debris, -group.y, group=group.x)%>% #drop species recorded on both surveys
                   mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
                   dplyr::select(desig_state, everything())%>%
-                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref")#drop sum columns and non-species categories
+                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref") 
 
 #define grouping vars
 kelp_invalg_group_vars <- kelp_invalg%>%
@@ -213,11 +203,8 @@ kelp_fish <- kelp_fish_cen %>%
                   dplyr::select(-sum) %>%
                   mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
                   dplyr::select(desig_state, everything())%>%
-                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref")%>%#drop sum columns and non-species categories  
-                  select(!c('anisotremus_davidsonii',
-                            'cheilotrema_saturnum',
-                            'citharichthys',
-                            'unidentified_fish'))
+                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref") #drop sum columns and non-species categories  
+         
 
 #define grouping vars
 kelp_fish_group_vars <- kelp_fish %>%
@@ -255,7 +242,7 @@ kelp_swath <- kelp_swath_cen %>%
                   dplyr::select(-sum) %>%
                   mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
                   dplyr::select(desig_state, everything())%>%
-                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref")#drop sum columns and non-species categories  #drop sum columns and non-species categories
+                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref")
              
 
 #define grouping vars
@@ -291,7 +278,7 @@ kelp_upc <- kelp_upc_cen %>%
                   dplyr::select(-sum) %>%
                   mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
                   dplyr::select(desig_state, everything())%>%
-                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref")#drop sum columns and non-species categories  #drop sum columns and non-species categories
+                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref")
              
 
 #define grouping vars
@@ -323,15 +310,13 @@ deep_reef <- deep_reef_cen %>%
                   rowwise() %>%
                   dplyr::mutate(sum = sum(across(26:ncol(.), na.rm = T))) %>%
                   filter(!(sum==0))%>% #remove rows containing only zeros
-                  dplyr::select(-c(sum, schooling_10_15_cm_sebastes_sp,
-                                schooling_10_15_cm_sebastes_sp,
+                  dplyr::select(-c(
                                 young_of_year_10_cm_sebastes_sp,
                                 ))%>%
                   mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
                   dplyr::select(desig_state, everything())%>%
-                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref")%>% #drop sum columns and non-species categories
-                  select(!(c('sebastes_goodei',
-                             'zaniolepis_frenata_or_latipinnis')))
+                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref") #drop sum columns and non-species categories
+        
 #define grouping vars
 deep_reef_group_vars <- deep_reef%>%
                     dplyr::select(1:10)
@@ -381,8 +366,9 @@ rocky_ord_data <- rocky_counts %>%
               ungroup() %>%
               dplyr::select(26:ncol(.))
 
-#calculate relative abundance
-rocky_rel <- vegan::decostand(rocky_ord_data, method = "hellinger")
+#counts are already relative, so apply sqrt transform to match "hellinger
+rocky_rel <- rocky_ord_data %>%
+             mutate(across(1:ncol(.),  function(x) sqrt(x)))
 
 #generate a BC dissim matrix
 rocky_distmat <- 
@@ -390,33 +376,30 @@ rocky_distmat <-
 
 
 #save group vars
-#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
+#output_path <-  "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
 #save(CCFRP_group_vars,kelp_invalg_group_vars,kelp_fish_group_vars,
 #     kelp_swath_group_vars, kelp_upc_group_vars,
 #   deep_reef_group_vars,rocky_group_vars,
-#    file = file.path(data_path, "group_vars.rda"))
+#    file = file.path(output_path, "group_vars.rda"))
 
 #save community matrices
-#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_ord_data,kelp_invalg_ord_data,kelp_fish_ord_data,
 #     kelp_swath_ord_data, kelp_upc_ord_data,
 #   deep_reef_ord_data,rocky_ord_data,
-#    file = file.path(data_path, "comm_data.rda"))
+#    file = file.path(output_path, "comm_data.rda"))
 
 
 #save envr vars 
-#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_envr_vars,kelp_invalg_envr_vars,kelp_fish_envr_vars,
 #     kelp_swath_envr_vars, kelp_upc_envr_vars,
 #  deep_reef_envr_vars, rocky_envr_vars,
-#    file = file.path(data_path, "envr_vars.rda"))
+#    file = file.path(output_path, "envr_vars.rda"))
 
 #save distance matrices
-#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_distmat,kelp_invalg_distmat,kelp_fish_distmat,
 #    kelp_swath_distmat, kelp_upc_distmat,
 #     deep_reef_distmat,rocky_distmat,
-#    file = file.path(data_path, "distance_matrices_BC.rda"))
+#    file = file.path(output_path, "distance_matrices_BC.rda"))
 ```
 
 
@@ -468,11 +451,9 @@ message("Done processing rocky_ord")
 
 
 #export to .RData
-#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
-#save(CCFRP_ord, kelp_invalg_ord, kelp_fish_ord, deep_reef_ord, rocky_ord, file = file.path(data_path, "bray_nmds_scores.rda"))
+#save(CCFRP_ord, kelp_invalg_ord, kelp_fish_ord, deep_reef_ord, rocky_ord, file = file.path(output_path, "bray_nmds_scores.rda"))
 
-#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
-#save(CCFRP_en, kelp_invalg_en, kelp_fish_en, deep_reef_en, rocky_en, file = file.path(data_path, "env_fit_scores.rda"))
+#save(CCFRP_en, kelp_invalg_en, kelp_fish_en, deep_reef_en, rocky_en, file = file.path(output_path, "env_fit_scores.rda"))
 
 ```
 
